--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -5,6 +5,8 @@ margin: 0 auto;
 
 nav a{
     text-align: center;
+    color:#ffffff;
+    text-decoration: none;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -29,17 +31,74 @@ header{
 
 nav a:hover{
     background-color:#30734c;
+    color: #ffffff;
 }
 
 .book, .join{
-    background-color: #f5a97a;
+    background-color:#30734c;
+    color: #ffffff;
+    text-decoration: none;
 }
 
 .book:hover, .join:hover{
-    background-color: #30734c;
+    background-color: #f5a97a;
+    color:black;
 }
 
 #background{
     height: 725px;
     background-color: #4d64a8;
+}
+
+.msg{
+    background-color: #4d64a8;
+}
+
+footer{
+    background-color: #f5a97a;
+}
+
+.home-title{
+    color: #4d64a8;
+}
+
+h4{
+    color: #4d64a8;
+}
+
+.msg h2{
+    color: #ffffff;
+}
+
+.msg p{
+    color:#ffffff;
+}
+
+footer h3{
+    color: black;
+}
+
+footer a{
+    color: black;
+    text-decoration: none;
+}
+
+footer a:hover{
+    color:#ffffff;
+}
+
+footer h3 a:hover{
+    text-decoration: underline;
+}
+
+footer a:hover{
+    color: black;
+}
+
+.icon{
+    width: 80px;
+}
+
+#hero-img{
+    width: 100%;
 }
