--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,104 +1,123 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Shadows+Into+Light&display=swap');
+
+
 #content {
-max-width: 1600px;
-margin: 0 auto; 
+    max-width: 1600px;
+    margin: 0 auto;
 }
 
-nav a{
+nav a {
     text-align: center;
-    color:#ffffff;
+    color: #ffffff;
     text-decoration: none;
 }
 
-#hero-msg h1, #hero-msg h4 {
+#hero-msg h1,
+#hero-msg h4 {
     text-align: center;
 }
 
-.button-box{
+.button-box {
     text-align: center;
 }
 
-main section{
+main section {
     text-align: center;
 }
 
-body{
+body {
     background-color: #fcfbfb;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
-header{
+h2 {
+    margin: 0;
+}
+
+header {
     background-color: #f5a97a;
 }
 
-nav a:hover{
-    background-color:#30734c;
+nav a:hover {
+    background-color: #30734c;
     color: #ffffff;
 }
 
-.book, .join{
-    background-color:#30734c;
+.book,
+.join {
+    background-color: #30734c;
     color: #ffffff;
     text-decoration: none;
+    font-size: 18px;
 }
 
-.book:hover, .join:hover{
+.book:hover,
+.join:hover {
     background-color: #f5a97a;
-    color:black;
+    color: black;
 }
 
-#background{
+#background {
     height: 725px;
     background-color: #4d64a8;
 }
 
-.msg{
+.msg {
     background-color: #4d64a8;
+    line-height: 1.5em;
 }
 
-footer{
+footer {
     background-color: #f5a97a;
 }
 
-.home-title{
+.home-title {
+    color: #4d64a8;
+    font-family: "Shadows Into Light";
+    font-size: 2em;
+}
+
+h4 {
     color: #4d64a8;
 }
 
-h4{
-    color: #4d64a8;
-}
-
-.msg h2{
+.msg h2 {
     color: #ffffff;
+    font-family: "Shadows Into Light";
 }
 
-.msg p{
-    color:#ffffff;
+.msg p {
+    color: #ffffff;
+    font-size: .8em;
 }
 
-footer h3{
+footer h3 {
     color: black;
 }
 
-footer a{
+footer a {
     color: black;
     text-decoration: none;
 }
 
-footer a:hover{
-    color:#ffffff;
+footer a:hover {
+    color: #ffffff;
 }
 
-footer h3 a:hover{
+footer h3 a:hover {
     text-decoration: underline;
 }
 
-footer a:hover{
+footer a:hover {
     color: black;
 }
 
-.icon{
+.icon {
     width: 80px;
 }
 
-#hero-img{
+#hero-img {
     width: 100%;
 }
