--- a/positionstyles.css
+++ b/positionstyles.css
@@ -64,26 +64,33 @@ grid-gap: 20px;
 /* Activity 3 styles */ 
 .content3 {
   /* This is the parent of the activity 3 boxes. */
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 100px;
 }
 .red3 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 125px; 
   background-color: red; 
+  grid-column: 1/3;
 } 
 .green3 {
-  width: 100px; 
-  height: 100px; 
+  width: 500px; 
+  height: 200px; 
   background-color: green;
+ 
 } 
 .yellow3 {
-  width: 100px; 
-  height: 100px; 
+  width: 452px; 
+  height: 200px; 
   background-color: gold; 
+ 
 } 
 .blue3 {
-  width: 100px;
-  height: 100px; 
-  background-color: blue; 
+  width: 100%;
+  height: 125px; 
+  background-color: blue;
+  grid-column: 1/3;
 } 
 /* Activity 4 styles */ 
 .content4 {
