--- a/positionstyles.css
+++ b/positionstyles.css
@@ -155,27 +155,27 @@
 }
 
 .red5 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: red;
 }
 
 .green5 {
   width: 100px;
-  height: 100px;
+  height: 150px;
   background-color: green;
 
 }
 
 .yellow5 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: gold;
 
 }
 
 .blue5 {
-  width: 100px;
+  width: 100%;
   height: 100px;
   background-color: blue;
 }
