--- a/positionstyles.css
+++ b/positionstyles.css
@@ -87,14 +87,14 @@
 }
 
 .green3 {
-  width: 500px;
+  width: 475px;
   height: 200px;
   background-color: green;
 
 }
 
 .yellow3 {
-  width: 452px;
+  width: 475px;
   height: 200px;
   background-color: gold;
 
@@ -182,24 +182,32 @@
 /* Activity 6 styles */
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display:grid;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px;
+
 }
 
 .red6 {
-  width: 100px;
+  width: 400px;
   height: 100px;
   background-color: red;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 
 .green6 {
   width: 100px;
   height: 100px;
   background-color: green;
+
+  grid-row: 5/6;
 }
 
 .yellow6 {
   width: 100px;
   height: 100px;
   background-color: gold;
+ 
 }
 
 .blue6 {
