--- a/positionstyles.css
+++ b/positionstyles.css
@@ -189,31 +189,38 @@
 
 .red6 {
   width: 400px;
-  height: 100px;
+  height: 200px;
   background-color: red;
-  grid-column: 1/2;
-  grid-row: 1/2;
+  grid-column: 1/3;
+  
 }
 
 .green6 {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
   background-color: green;
-
-  grid-row: 5/6;
+  grid-column: 1/2;
+  grid-row: 4;
+  z-index: 1;
+  margin-top: -100px;
 }
 
 .yellow6 {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 400px;
   background-color: gold;
- 
+  grid-column: 5;
+  grid-row: 3/6;
+  z-index: 1;
 }
 
 .blue6 {
-  width: 100px;
-  height: 100px;
+  width: 400px;
+  height: 400px;
   background-color: blue;
+  grid-column: 2/4;
+  grid-row: 3;
+  margin-top: -100px;
 }
 
 
