--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -18,6 +18,10 @@ nav a {
     text-align: center;
 }
 
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
 .button-box {
     text-align: center;
 }
@@ -43,6 +47,13 @@ h2 {
 
 header {
     background-color: #f5a97a;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a:hover {
@@ -50,7 +61,8 @@ nav a:hover {
     color: #ffffff;
 }
 
-.book, .join {
+.book,
+.join {
     background-color: #30734c;
     color: #ffffff;
     text-decoration: none;
@@ -135,19 +147,32 @@ footer a:hover {
     width: 100%;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+}
+
 #logo_link {
-padding-top: 5px;
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 footer .social img {
     padding-top: 15px;
 }
 
-.rivers-card, .camping-card, .rapids-card {
+.rivers-card,
+.camping-card,
+.rapids-card {
     margin: 200px 0;
 }
 
 .card-img {
     border: 10px solid black;
 }
-
