--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -21,7 +21,9 @@ nav a {
 #hero-msg {
     grid-column: 2/3;
     grid-row: 1/2;
+    margin-top: 100px;
 }
+
 .button-box {
     text-align: center;
 }
@@ -81,18 +83,26 @@ nav a:hover {
 #background {
     height: 725px;
     background-color: #4d64a8;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 .msg {
-    background-color: #4d64a8;
+    background-color: #30734c;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 footer {
     background-color: #f5a97a;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .home-title {
@@ -150,11 +160,13 @@ footer a:hover {
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
 }
 
 #hero-box {
     grid-column: 1/4;
     grid-row: 1/3;
+    z-index: -1;
 }
 
 #logo_link {
@@ -167,12 +179,82 @@ footer .social img {
     padding-top: 15px;
 }
 
-.rivers-card,
-.camping-card,
+.rivers-card{
+    margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
 .rapids-card {
     margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 .card-img {
     border: 10px solid black;
+    width: 100%;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.moutains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364; 
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
