--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -157,6 +157,11 @@ footer a:hover {
     width: 100%;
 }
 
+#river-img {
+    width: 100%;
+    height: 400px;
+}
+
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
