--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -157,11 +157,6 @@ footer a:hover {
     width: 100%;
 }
 
-#river-img {
-    width: 100%;
-    height: 400px;
-}
-
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
@@ -184,16 +179,18 @@ footer .social img {
     padding-top: 15px;
 }
 
-.rivers-card{
+.rivers-card {
     margin: 200px 0;
     grid-column: 2/4;
     grid-row: 2/3;
 }
-.camping-card{
+
+.camping-card {
     margin: 200px 0;
     grid-column: 5/7;
     grid-row: 2/3;
 }
+
 .rapids-card {
     margin: 200px 0;
     grid-column: 8/10;
@@ -206,59 +203,143 @@ footer .social img {
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
-.card-img:hover{
+
+.card-img:hover {
     opacity: .6;
     transform: scale(1.1);
 }
 
-.home-grid{
+.home-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
+
 .moutains {
     width: 100%;
     grid-column: 2/7;
     grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364; 
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+/* css for my river subpage */
+/* this section is for the banner*/
+
+#banner-img {
+    width: 100%;
+    height: 500px;
+}
+
+#banner {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+    justify-content: center;
+    align-content: center;
+    justify-items: center;
+    align-items: center;
+}
+
+#banner-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+#banner-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+
+#banner-msg h4 {
+    color: #f5a97a;
+}
+
+.banner-title {
+    color:#f5a97a;
+    font-family: "Shadows Into Light";
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+/* css for the main section of the subpage */
+.river-grid{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+}
+
+.salmon-pic{
+grid-column: 1/3;
+grid-row: 1;
+}
+
+.salmon-text{
+    grid-column: 3/6;
+    grid-row: 1;
+    text-align: right;
+    font-family: "Montserrat";
+    background-color: #30734c;
+}
+
+.river-img{
+    width: 100%;
+    border:  10px solid #4d64a8;
 }
 
 @media screen and (max-width: 900px) {
-    #hero, .home-grid {
+
+    #hero,
+    .home-grid {
         display: block;
         height: auto;
     }
-    nav, footer {
+
+    nav,
+    footer {
         flex-direction: column;
     }
+
     nav a {
         display: block;
         padding: 15px;
     }
+
     #hero {
         margin-top: 0;
     }
+
     #hero-msg {
         margin-top: 0;
     }
+
     #hero-msg h4 {
         display: none;
     }
+
     .home-title {
         font-size: 25px;
         color: #6f7364;
     }
-    .rivers-card, .camping-card, .rapids-card { 
+
+    .rivers-card,
+    .camping-card,
+    .rapids-card {
         margin: 50px auto;
         width: 60%;
     }
+
     #background {
         display: none;
     }
-    .mountains, .msg {
+
+    .mountains,
+    .msg {
         width: 80%;
         display: block;
         margin: 0 auto;
     }
+
     footer {
         margin-top: 25px;
     }
