--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -279,12 +279,29 @@ grid-row: 1;
     grid-row: 1;
     text-align: right;
     font-family: "Montserrat";
-    background-color: #30734c;
 }
 
-.river-img{
+.salmon-img{
     width: 100%;
     border:  10px solid #4d64a8;
+}
+
+.utah-pic{
+    grid-column: 3/6;
+    grid-row: 3;
+}
+
+.utah-img{
+    width: 100%;
+    height: 75%;
+    border: 10px solid #4d64a8;
+}
+
+.utah-text{
+    grid-column: 1/3;
+    grid-row: 3;
+    text-align: left;
+    font-family: "Montserrat";
 }
 
 @media screen and (max-width: 900px) {
