--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -274,7 +274,7 @@ grid-column: 1/3;
 grid-row: 1;
 }
 
-.salmon-text{
+.salmon-info{
     grid-column: 3/6;
     grid-row: 1;
     text-align: right;
@@ -297,7 +297,7 @@ grid-row: 1;
     border: 10px solid #4d64a8;
 }
 
-.utah-text{
+.utah-info{
     grid-column: 1/3;
     grid-row: 3;
     text-align: left;
