--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -222,6 +222,9 @@ footer .social img {
 }
 
 /* css for my river subpage */
+h5{
+    color: #ffffff;
+}
 /* this section is for the banner*/
 
 #banner-img {
