--- a/personalsite/styles/styles.css
+++ b/personalsite/styles/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Send+Flowers&family=Sunflower&display=swap');
 
 #content {
-    max-width: 1600px;
+    max-width: 1700px;
     margin: 0 auto;
 }
 
@@ -38,6 +38,58 @@ nav a:hover {
     color: #ffffff;
 }
 
+#banner-img {
+    width: 1700px;
+    height: 750px;
+    margin-left: -8px;
+}
+
+.home-grid{
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr 1fr 1fr;
+}
+
+h6{
+    color: #ffffff;
+}
+
+.workbench{
+    grid-column: 1/2;
+    grid-row: 1;
+}
+
+.mission{
+    grid-column: 3/6;
+    grid-row: 1;
+    text-align: center;
+    font-size: 2em;
+    margin-left: -200px;
+}
+
+.bouquet{
+    grid-column: 2/3;
+    grid-row: 2;
+    margin-left: -350px;
+}
+
+.bouquet-pic{
+    width: 510px
+}
+
+.aboutus{
+    grid-column: 3/6;
+    grid-row: 2;
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -55,7 +107,7 @@ nav a:hover {
 footer {
     background-color: #e23961;
     padding: 25px 50px;
-    margin-top: 200px;
+    margin-top: 100px;
     display: flex;
     justify-content: space-around;
     align-items: center;
