--- a/personalsite/styles/styles.css
+++ b/personalsite/styles/styles.css
@@ -5,6 +5,10 @@
     margin: 0 auto;
 }
 
+h1{
+    font-family: 'Send Flowers';
+}
+
 header {
     background-color: #136b90;
     display: grid;
@@ -39,7 +43,7 @@ nav a:hover {
 }
 
 #banner-img {
-    width: 1700px;
+    width: 100%;
     height: 750px;
     margin-left: -8px;
 }
@@ -58,13 +62,23 @@ h6{
     grid-row: 1;
 }
 
+.workbench-pic{
+    width: 600px;
+}
+
 .mission{
-    grid-column: 3/6;
+    grid-column: 3/5;
     grid-row: 1;
     text-align: center;
-    font-size: 2em;
     margin-left: -200px;
+    background-color: #f4abbc;
 }
+
+.mission p{
+    font-size: 30px;
+    font-family:'Sunflower';
+}
+
 
 .bouquet{
     grid-column: 2/3;
