--- a/personalsite/styles/styles.css
+++ b/personalsite/styles/styles.css
@@ -96,6 +96,7 @@ h6 {
     grid-column: 1/2;
     grid-row: 2;
     margin-left: 100px;
+    padding-top: -100PX;
 }
 
 .bouquet-pic {
@@ -109,7 +110,7 @@ h6 {
     text-align: center;
     padding-left: 10px;
     padding-right: 30px;
-    margin-top: -75px;
+    margin-top: 50px;
 }
 
 .aboutus h2 {
@@ -151,8 +152,8 @@ footer h3 {
     margin: auto;
     text-align: center;
     grid-column: 2/5;
-    grid-row: 2;
-    margin-top: 500px;
+    grid-row: 1;
+    margin-top: 600px;
   }
   
   .title {
