--- a/personalsite/styles/styles.css
+++ b/personalsite/styles/styles.css
@@ -20,6 +20,10 @@ header {
     text-align: center;
 }
 
+.logo{
+    margin-top: 15px;
+}
+
 #logo_link {
     padding-top: 10px;
     margin-top: -25px;
@@ -97,7 +101,6 @@ h6 {
     grid-column: 1/2;
     grid-row: 2;
     margin-left: 100px;
-    padding-top: -100PX;
 }
 
 .bouquet-pic {
@@ -152,61 +155,185 @@ footer h3 {
     grid-column: 2/5;
     grid-row: 1;
     margin-top: 600px;
-  }
-  
-  .title {
+}
+
+.title {
     color: #e23961;
     font-size: 18px;
-  }
-  
-  button {
+}
+
+button {
     border: none;
     outline: 0;
     display: inline-block;
     padding: 8px;
-    color:#e23961;
+    color: #e23961;
     background-color: #000;
     text-align: center;
     cursor: pointer;
     width: 100%;
     font-size: 18px;
-  }
-  
-  .card a {
+}
+
+.card a {
     text-decoration: none;
     font-size: 25px;
     color: black;
-  }
-  
-button:hover, .card a:hover {
-    opacity: 0.7;
-  }
+}
 
-.card h1{
-    color:#136b90;
+button:hover,
+.card a:hover {
+    opacity: 0.7;
+}
+
+.card h1 {
+    color: #136b90;
 }
 
 /* css for suppage2 */
 
-.occasion-grid{
+.occasion-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
-.occasion-grid img{
-    height: 600px;
-    
-}
 
 
-#wedding1{
+#wedding1 {
     grid-column: 1;
     grid-row: 1;
     padding-top: 25px;
 }
-#wedding2{
-    grid-column: 1;
+
+#wedding1 img{
+    height: 350px;
+    width: 350px;
+}
+
+#wedding2 {
+    grid-column: 2;
     grid-row: 1;
     padding-top: 25px;
-    margin-left: 405px;
+
+}
+
+#wedding2 img{
+    height: 350px;
+    width: 350px;
+}
+
+#wedding3 {
+    grid-column: 1;
+    grid-row: 1;
+    margin-top: 395px;
+}
+
+#wedding3 img{
+    height: 350px;
+    width: 350px;
+}
+
+#wedding4 {
+    grid-column: 2;
+    grid-row: 1;
+    margin-top: 395px;
+}
+
+#wedding4 img{
+    height: 350px;
+    width: 350px;
+}
+
+.weddings-info {
+    grid-column: 3/6;
+    grid-row: 1;
+    text-align: center;
+    font-size: 20px;
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
+.weddings-info p strong{
+    font-size: 50px;
+    text-align: center;
+    font-family: 'Send Flowers';
+}
+.weddings-info p{
+    margin-top: 75px;
+}
+
+#mothers-pic {
+    grid-column: 1;
+    grid-row: 3;
+    padding-top: 40px;
+}
+
+#mothers-pic1{
+    grid-column: 2;
+    grid-row: 3;
+    padding-top: 40px;
+}
+
+#mothers-pic img{
+    height: 350px;
+    width: 350px;
+}
+
+#mothers-pic1 img{
+    height: 350px;
+    width: 350px;
+}
+
+.mothers-info{
+    grid-column: 3/6;
+    grid-row: 3;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Sunflower';
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
+.mothers-info p strong{
+    font-size: 50px;
+    text-align: center;
+    font-family: 'Send Flowers';
+}
+
+#valentine{
+    grid-column: 1;
+    grid-row: 5;
+    padding-top: 40px;
+}
+
+#valentine img{
+    height: 350px;
+    width: 350px;
+}
+
+#anniversary{
+    grid-column: 2;
+    grid-row: 5;
+    padding-top: 40px;
+}
+
+#anniversary img{
+    height: 350px;
+    width: 350px;
+}
+
+.feb-info{
+    grid-column: 3/6;
+    grid-row: 5;
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Sunflower';
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
+.feb-info p strong{
+    font-size: 40px;
+    text-align: center;
+    font-family: 'Send Flowers';
 }
