--- a/personalsite/styles/styles.css
+++ b/personalsite/styles/styles.css
@@ -251,6 +251,7 @@ button:hover,
     font-size: 20px;
     padding-right: 30px;
     padding-left: 30px;
+    margin-top: 100px;
 }
 
 .weddings-info p strong{
@@ -287,7 +288,7 @@ button:hover,
 .mothers-info{
     grid-column: 3/6;
     grid-row: 3;
-    text-align: center;
+    text-align: left;
     font-size: 20px;
     font-family: 'Sunflower';
     padding-right: 30px;
@@ -325,7 +326,7 @@ button:hover,
 .feb-info{
     grid-column: 3/6;
     grid-row: 5;
-    text-align: center;
+    text-align: left;
     font-size: 20px;
     font-family: 'Sunflower';
     padding-right: 30px;
@@ -334,6 +335,6 @@ button:hover,
 
 .feb-info p strong{
     font-size: 40px;
-    text-align: center;
+    text-align: left;
     font-family: 'Send Flowers';
 }
